# numkell

./: Util.hs  numkell.cabal
src/Data/: NumKell.hs
src/Data/NumKell/: Aliases.hs  Broadcast.hs  Funk.hs  HListUtil.hs  Memo.hs  NewAxes.hs  Show.hs  Slice.hs  SumAxes.hs
